--- a/src/main/resources/templates/itemsAdd.html
+++ b/src/main/resources/templates/itemsAdd.html
@@ -23,7 +23,7 @@
     <!--    favicon-->
     <link rel="icon" th:href="@{/images/logo.png}" href="images/favicon.png" type="image/png" sizes="16x16">
 
-    <title>Mitho Confectionary || Add Products</title>
+    <title>Mitho Confectionary || Add Items</title>
 </head>
 
 <body>
@@ -54,8 +54,8 @@
     </div>
 </nav>
 <div class="container">
-    <h3>Add a new Product</h3>
-    <form th:action="@{/admin/products/add}" method="post" th:object="${productDTO}" enctype="multipart/form-data">
+    <h3>Add a new Item</h3>
+    <form th:action="@{/admin/items/add}" method="post" th:object="${itemDTO}" enctype="multipart/form-data">
         <div class="row">
             <div class="col-sm-5">
 
@@ -86,20 +86,20 @@
                            placeholder="Weight">
                 </div>
                 <div class="form-group">
-                    <label for="description">Product Description</label>
+                    <label for="description">Item Description</label>
                     <textarea class="form-control" rows="5" th:field="*{description}" name="description" id="description"></textarea>
                 </div>
             </div>
             <div class="col-sm-5">
-                <p>Product Image</p>
+                <p>Item Image</p>
                 <div class="custom-file">
-                    <input type="file"  class="custom-file-input" name="productImage" accept="image/jpeg, image/png"  id="productImage"/>
-                    <label class="custom-file-label" for="productImage">Choose file</label>
+                    <input type="file"  class="custom-file-input" name="itemImage" accept="image/jpeg, image/png"  id="itemImage"/>
+                    <label class="custom-file-label" for="itemImage">Choose file</label>
                 </div>
                 <div class="form-group">
-                    <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/productImages/' + productDTO.imageName}}" style="margin-top: 20px" alt=" ">
+                    <img src="#" id="imgPreview" height="100px" width="100px" th:src="@{${'/itemImages/' + itemDTO.imageUrl}}" style="margin-top: 20px" alt=" ">
                 </div>
-                <input type="hidden" name="imgName" th:value="${productDTO.imageName}">
+                <input type="hidden" name="imgName" th:value="${itemDTO.imageUrl}">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
@@ -126,7 +126,7 @@
             reader.readAsDataURL(input.files[0])
         }
     }
-    $('#productImage').change(function(){
+    $('#itemImage').change(function(){
         readURL(this);
     });
     $(".custom-file-input").on("change", function() {
