implement view product feature

--- a/src/main/resources/templates/viewItem.html
+++ b/src/main/resources/templates/viewItem.html
@@ -89,6 +89,7 @@
         </div>
     </div>
 </nav>
+
 <div class="container mt-5">
     <div class="row">
         <div class="col-sm-5 d-flex justify-content-center">
@@ -97,22 +98,22 @@
                     height="300px"
                     width="300px"
                     src=""
-                    th:src="@{${'/productImages/' + product.imageName}}"
-                    alt=""
+                    th:src="@{${'/itemImages/' + item.imageName}}"
+                    th:alt="${item.name}"
             />
         </div>
         <div class="col-sm-7 mt-5">
-            <h2 th:text="${product.name}"></h2>
-            <p th:text="${product.category.name}"></p>
-            <h2>₹ <span th:text="${product.price}"></span></h2>
+            <h2 th:text="${item.name}"></h2>
+            <p th:text="${item.category.name}"></p>
+            <h2>$ <span th:text="${item.price}"></span></h2>
             <h5>Weight:
-                <spna th:text="${product.weight}"></spna>
+                <spna th:text="${item.weight}"></spna>
                 grams.
             </h5>
-            <p th:text="${product.description}"></p>
+            <p th:text="${item.description}"></p>
             <a
                     href=""
-                    th:href="@{/addToCart/{id}(id = ${product.id})}"
+                    th:href="@{/addToCart/{id}(id = ${item.id})}"
                     class="btn btn-primary"
             >Add to cart</a
             >
