--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -74,7 +74,7 @@
                     <li class="list-group-item">All Products</li>
                 </a>
                 <a href="" th:each="category, iStat : ${categories}"
-                   th:href="@{/shop/category/{id}(id=${category.id})}">
+                   th:href="@{/shop/categories/{id}(id=${category.id})}">
                     <li
                             class="list-group-item" th:text="${category.name}"></li>
                 </a>
@@ -82,19 +82,18 @@
             </ul>
         </div>
         <div class="col-sm-9">
-            <div class="card" style="margin-top: 20px" th:each="product : ${products}">
+            <div class="card" style="margin-top: 20px" th:each="item : ${items}">
                 <div class="row no-gutters">
                     <div class="col-sm-5 d-flex justify-content-center">
-                        <img class="" height="150px" width="150px" th:src="@{${'/productImages/' + product.imageName}}"
-                             th:alt="${product.name}">
+                        <img class="" height="150px" width="150px" th:src="@{${'/itemImages/' + item.imageName}}"
+                             th:alt="${item.name}">
                     </div>
                     <div class="col-sm-7 d-flex justify-content-center">
                         <div class="card-body">
-                            <h5 class="card-title" th:text="${product.name}"></h5>
-                            <h4>₹ <span th:text="${product.price}"></span></h4>
-                            <p th:text="${product.description}">Suresh Dasari is a founder and technical lead developer
-                                in tutlane.</p>
-                            <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.id})}" class="btn btn-primary">View
+                            <h5 class="card-title" th:text="${item.name}"></h5>
+                            <h4>$ <span th:text="${item.price}"></span></h4>
+                            <p th:text="${item.description}">.</p>
+                            <a href="#" th:href="@{/shop/viewItem/{id}(id=${item.id})}" class="btn btn-primary">View
                                 Product</a>
                         </div>
                     </div>
